FUNCTION(BUILD_OMEGA_APPLICATION APP_NAME)
	SET(APP_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/${APP_NAME}")
	SET(APP_MAIN_CPP "${APP_FOLDER}/main.cpp")

	ADD_EXECUTABLE(${APP_NAME} ${APP_MAIN_CPP})
	TARGET_LINK_LIBRARIES(${APP_NAME} PRIVATE OMEGA_ENGINE)
	TARGET_COMPILE_OPTIONS(${APP_NAME} PRIVATE ${OMEGA_CXX_FLGAS})
	
	IF(OMEGA_THREAD_SANITIZE OR OMEGA_THREAD_SANITIZE)
		SET_TARGET_PROPERTIES(${NAME} PROPERTIES 
			LINK_FLAGS "${OMEGA_LINK_FLAGS}"
		)
	ENDIF()
ENDFUNCTION()

IF(OMEGA_BUILD_SCENE_EXAMPLE)
	BUILD_OMEGA_APPLICATION(Scene)
ENDIF()
IF(OMEGA_BUILD_SIMPLE_EXAMPLE)
	BUILD_OMEGA_APPLICATION(Simple)
ENDIF()

